// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Modal.vue Snapshots renders modal snapshot 1`] = `
<div class="modal__mask">
  <div class="modal">
    <div class="modal__header">
      <div class="modal__title">
        <h1>Hivestack SSP</h1> <i class="fas fa-times"></i>
      </div>
      <div class="modal__date">2021-Today</div>
    </div>
    <div class="modal__body">
      <div class="modal__cover" style="background-image: url(&quot;hivestack.jpg&quot;);"></div>
      <div class="modal__text">
        <p class="modal__description">Building an SSP for publishers to maximize revenue</p> <a href="https://hivestack.com" target="_blank" class="modal__link">See the project
          <i aria-hidden="true" class="fas fa-long-arrow-alt-right"></i></a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal.vue Snapshots renders modal without link snapshot 1`] = `
<div class="modal__mask">
  <div class="modal">
    <div class="modal__header">
      <div class="modal__title">
        <h1>Hivestack SSP</h1> <i class="fas fa-times"></i>
      </div>
      <div class="modal__date">2021-Today</div>
    </div>
    <div class="modal__body">
      <div class="modal__cover" style="background-image: url(&quot;hivestack.jpg&quot;);"></div>
      <div class="modal__text">
        <p class="modal__description">Building an SSP for publishers to maximize revenue</p>
        <!---->
      </div>
    </div>
  </div>
</div>
`;
